# 3DEngineCpp

./: '  .gitignore  CMakeLists.txt
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
src/: main.cpp
src/core/: math3d.h
src/physics2/: AABB.h  boundingSphere.cpp  boundingSphere.h  collisionDispatch.cpp  intersectData.cpp  intersectData.h
src/rendering/: mesh.h
test/: test_physics.cpp  test_test.cpp
